can select colours, view a list of the colours with their hexcode, can delete selected colours

--- a/index.css
+++ b/index.css
@@ -7,6 +7,16 @@ main {
   height: 20vh;
 }
 
-.row {
+.row, .select {
   display: inline-block
+}
+
+.selected {
+
+}
+
+.select {
+  margin-top: 10vh;
+  width: 15vh;
+  height: 15vh;
 }
